fix z-index

--- a/app/blocks/video-preview/video-preview.scss
+++ b/app/blocks/video-preview/video-preview.scss
@@ -4,6 +4,7 @@
 
   &__image {
     position: relative;
+    z-index: 1;
   }
 
   &__text {
